# voicevox_juce-demo

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  deno.json
AudioPlugin/: CMakeLists.txt
AudioPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
AudioPlugin/Source/View/: MusicView.cpp  MusicView.h  PlayerController.cpp  PlayerController.h  ProgressPanel.cpp  ProgressPanel.h
AudioPlugin/Source/VoicevoxEngine/: AudioQueryConverter.cpp  AudioQueryConverter.h  ScoreJsonConverter.cpp  ScoreJsonConverter.h  StaticMoraMapping.cpp  StaticPhonemes.cpp  StaticPhonemes.h  TaskDetails.h  VoicevoxEngine.cpp  VoicevoxEngine.h
AudioPlugin/VoicevoxSong/: CMakeLists.txt
AudioPlugin/VoicevoxSong/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpinLockedPositionInfo.h
AudioPlugin/VoicevoxSong/Source/Exchange/RPC/: Request.cpp  Request.h  TaskThread.h
AudioPlugin/VoicevoxSong/Source/View/: JsonTreeItem.h  PlayerController.h
AudioPlugin/VoicevoxTalk/: CMakeLists.txt
AudioPlugin/VoicevoxTalk/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
AudioPlugin/VoicevoxTalk/Source/View/: MusicView.h  PlayerController.cpp
CMake/: Findjuce.cmake  Findvoicevox_juce.cmake
Tasks/deno/: build-plugin.ts  configure-plugin.ts  install-plugin.ts  launch-standalone.ts
Test/E2E/: all_mora.json  doremi.json  doremi2.json  score.json
voicevox_juce_extra/: voicevox_juce_extra.cpp  voicevox_juce_extra.h
voicevox_juce_extra/Engine/: TaskDetails.h  VoicevoxEngine.cpp
voicevox_juce_extra/Format/: AudioQueryConverter.cpp  AudioQueryConverter.h  ScoreJsonConverter.cpp  ScoreJsonConverter.h
voicevox_juce_extra/Helper/: HelperTemplate.h
voicevox_juce_extra/Static/: StaticMoraMapping.cpp  StaticMoraMapping.h  StaticPhonemes.cpp  StaticPhonemes.h
